--- a/src/app/agenda/tab2.page.html
+++ b/src/app/agenda/tab2.page.html
@@ -2,21 +2,21 @@
   <ion-toolbar color="" >
     <ion-grid>
       <ion-row  class="ion-align-items-center">
-        <ion-col size="9">
+        <ion-col size="12">
           <img class="logo" src="../../assets/i/Logo_Lineal.png">
         </ion-col>
-        <ion-col size="3"  color="light">   
-          <ion-button size="small" color="secondary" shape="round" fill="outline" class="btn_seccion"  (click)="cuenta()">Cuenta</ion-button>
-          <!--<ion-item   lines="none">
+       <!-- <ion-col size="3"  color="light">   
+        <ion-button size="small" color="dark" shape="round" fill="outline" class="btn_seccion"  (click)="cuenta()"><b>Cuenta</b></ion-button>
+          <ion-item   lines="none">
             <ion-avatar slot="">
               <img src="../../assets/varios/avatar.jpg">
             </ion-avatar>
-        </ion-item>-->
-      </ion-col>
+        </ion-item>
+      </ion-col>-->
   </ion-row>
 </ion-grid>
     <ion-title>
-      <span><b>Agenda Legislativa</b></span>
+      <span><b>Agenda Especializada</b></span>
       <hr>
     </ion-title>
   </ion-toolbar>
