--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,20 +11,20 @@
       <ion-label color="white">Agenda</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tribuna">
-      <ion-icon src="../../assets/icon/tribuna.svg" color="white"></ion-icon>
-      <ion-label color="white">Tribuna</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="representantes" *ngIf="true">
-      <ion-icon src="../../assets/icon/repre_.svg" color="white"></ion-icon>
-      <ion-label  color="white">
-       Representantes</ion-label>
+    <ion-tab-button tab="mapeo">
+      <ion-icon src="../../assets/icon/mapa.svg" color="white"></ion-icon>
+      <ion-label color="white">Mapeo</ion-label>
     </ion-tab-button>
   
-    <ion-tab-button tab="vota" *ngIf="true">
+    <ion-tab-button tab="sondeos">
       <ion-icon src="../../assets/icon/marca.svg" color="white"></ion-icon>
-      <ion-label color="white">Vota</ion-label>
+      <ion-label color="white">Sondeos</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="estadisticas">
+      <ion-icon src="../../assets/icon/estadistica.svg" color="white"></ion-icon>
+      <ion-label  color="white">
+       Analisis</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
