--- a/src/app/agenda/tab2.page.scss
+++ b/src/app/agenda/tab2.page.scss
@@ -37,7 +37,10 @@ ion-avatar{
    border: #C9C9C8 1px solid;
  //  max-width: 50% !important;
 }
-
+.logo {
+    margin: 1% 15% 1% 15%;
+    max-width: 70% !important;
+}
 
 hr {
     border-bottom: 2px solid #262626 !important;
