--- a/src/app/mapeo/tab3.page.scss
+++ b/src/app/mapeo/tab3.page.scss
@@ -32,7 +32,10 @@
       border: #C9C9C8 1px solid;
     //  max-width: 50% !important;
    }
-   
+   .logo {
+    margin: 1% 15% 1% 15%;
+    max-width: 70% !important;
+}
    
    hr {
        border-bottom: 2px solid #262626 !important;
