--- a/src/app/noticias/tab1.page.html
+++ b/src/app/noticias/tab1.page.html
@@ -2,21 +2,21 @@
   <ion-toolbar color="" >
     <ion-grid>
       <ion-row  class="ion-align-items-center">
-        <ion-col size="9">
+        <ion-col size="12">
           <img class="logo" src="../../assets/i/Logo_Lineal.png">
         </ion-col>
-        <ion-col size="3"  color="light">   
-          <ion-button size="small" color="secondary" shape="round" fill="outline" class="btn_seccion"  (click)="cuenta()">Cuenta</ion-button>
-          <!--<ion-item   lines="none">
+       <!-- <ion-col size="3"  color="light">   
+        <ion-button size="small" color="dark" shape="round" fill="outline" class="btn_seccion"  (click)="cuenta()"><b>Cuenta</b></ion-button>
+          <ion-item   lines="none">
             <ion-avatar slot="">
               <img src="../../assets/varios/avatar.jpg">
             </ion-avatar>
-        </ion-item>-->
-      </ion-col>
+        </ion-item>
+      </ion-col>-->
   </ion-row>
 </ion-grid>
     <ion-title>
-      <span><b>Noticias</b></span>
+      <span><b>Noticias Especializadas</b></span>
       <hr>
     </ion-title>
   </ion-toolbar>
@@ -28,21 +28,18 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>-->
 
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Noticias</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <!--<app-explore-container name="Tab 1 page"></app-explore-container>-->
   <ion-card   *ngFor="let item of items" tappable (click)="presentModal(item)">
     <ion-card-header>
       <ion-img [src]="item.imagen"> </ion-img>
       <ion-card-title><b>{{item.titulo}}</b></ion-card-title>
-      <ion-card-subtitle><div class="ion-text-end">Agosto 08, 2020</div></ion-card-subtitle>
+      <div style="color: black; font-weight: bold;" class="ion-text-right"><ion-datetime displayFormat="MMMM DD, YYYY" value="{{item.fecha}}" 
+        monthNames= "Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre"
+        no-wrap disabled></ion-datetime></div>
     </ion-card-header>
   
     <ion-card-content>
+      
       {{item.extracto}}
     </ion-card-content>
   </ion-card>
